tweaked and converted logic to cpp

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/L_Gameplay.L_Gameplay
+EditorStartupMap=/Game/Maps/L_GameplayCpp.L_GameplayCpp
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/L_Gameplay.L_Gameplay
+GameDefaultMap=/Game/Maps/L_GameplayCpp.L_GameplayCpp
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
